# datawaybr_vector_database

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
src/edai_0001/01-intro/: readme.md
src/edai_0001/02-prep/: readme_uv.md
src/edai_0001/03-text/: 01_setup.py  02_explore_data.ipynb  03_consideracoes_alexinaldo_uso_embeddings.md  03_embeddings.py  03_embeddings_asc.py  04_ingest_qdrant.py  04_ingest_qdrant_asc.py  05_streamlit.py  05_streamlit_asc.py
src/edai_0001/03-text/.ipynb_checkpoints/: 02_explore_data-checkpoint.ipynb  03_embeddings-checkpoint.py
src/edai_0001/04-images/: 01_setup.py  02_explore_data.ipynb  03.1_embeddings.py  03_embeddings.py  04_ingest_qdrant.py  05.1_streamlit.py  05_streamlit.py
src/edai_0001/05-api/: 01_api.py
src/edai_0001/06-rag/: 01_basic_rag.py
