[project]
name = "edai-0001"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.32.3",
    "jupyter",
    "pandas",
    "sentence-transformers",
    "qdrant-client",
    "pyarrow",
    "fastembed",
    "streamlit>=1.38.0",
    "llm>=0.16",
    "langchain>=0.2.5",
    "langchain-community>=0.2.5",
    "tiktoken>=0.7.0",
    "langchain-openai>=0.1.14",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "langchain-qdrant",
    "jupyterlab>=4.2.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
